# TrinityChain

./: .renderignore  Cargo.toml  README.md  render.yaml  shortcuts.sh
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: TestComponent.jsx  TrinityChainDashboard.jsx  main.jsx
dashboard/static/: dashboard.html
documentation/: API_ENDPOINTS.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_MOC.md  AUDIT_FIXES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NODE_SETUP.md  SAFETY_AUDIT.md  SECURITY.md  TELEGRAM_MINIAPP_SETUP.md  TRIANGLE_UTXO_AUDIT.md
src/: api.rs  blockchain.rs  geometry.rs  network.rs  persistence.rs  transaction.rs
