[package]
name = "trinitychain"
version = "0.2.0"
edition = "2021"

[lib]
name = "trinitychain"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
dirs = "5.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
secp256k1 = { version = "0.29", features = ["rand-std"] }
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
hex = "0.4"
tokio = { version = "1.42", features = ["full"] }
bincode = "1.3"
colored = "2.1"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
rpassword = "7.3"
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "fs"] }
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"
ratatui = "0.26"
crossterm = "0.27"
humantime = "2.1"
parking_lot = "0.12"
ipnetwork = "0.20"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
rayon = "1.8"
lru = "0.12"
bip39 = "2.2"
bip32 = "0.5"

[[bin]]
name = "trinity-wallet"
path = "src/bin/trinity-wallet.rs"

[[bin]]
name = "trinity-miner"
path = "src/bin/trinity-miner.rs"

[[bin]]
name = "trinity-node"
path = "src/bin/trinity-node.rs"

[[bin]]
name = "trinity-send"
path = "src/bin/trinity-send.rs"

[[bin]]
name = "trinity-wallet-new"
path = "src/bin/trinity-wallet-new.rs"

[[bin]]
name = "trinity-balance"
path = "src/bin/trinity-balance.rs"

[[bin]]
name = "trinity-mine-block"
path = "src/bin/trinity-mine-block.rs"

[[bin]]
name = "trinity-history"
path = "src/bin/trinity-history.rs"

[[bin]]
name = "trinity-wallet-backup"
path = "src/bin/trinity-wallet-backup.rs"

[[bin]]
name = "trinity-wallet-restore"
path = "src/bin/trinity-wallet-restore.rs"

[[bin]]
name = "trinity-addressbook"
path = "src/bin/trinity-addressbook.rs"

[[bin]]
name = "trinity-api"
path = "src/bin/trinity-api.rs"

[[bin]]
name = "trinity-telegram-bot"
path = "src/bin/trinity-telegram-bot.rs"

[[bin]]
name = "trinity-server"
path = "src/bin/trinity-server.rs"

[dev-dependencies]
axum-test = "14.1.1"
